--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   justify-content: space-between;
-  background: $black;
+  background: $oucBrown;
   &__section {
     display: flex;
     &--search {
@@ -15,7 +15,7 @@
     display: flex;
   }
   &__link {
-    background: $black;
+    background: $oucBrown;
     color: white;
     border-right: 1px solid rgba(255,255,255,0.1);
     text-transform: uppercase;
@@ -39,17 +39,19 @@
       svg {
         transform: scale(1.2)
       }
-      background: linear-gradient(90deg, #48ded4 0%, #a026bf 20%, #e82c75 60%, $yellow 85%, #48ded4 95%) fixed;
-      // background: none;
+      background: lighten($oucBrown, 5%) fixed;
+      // background: none;`
     }
     &--logo {
+      background: $oucGreen fixed;
       &:hover {
+        background: $oucGreen fixed;
         svg {
           transform: none;
         }
       }
       svg {
-        width: 200px;
+        width: 150px;
         margin: 0;
       }
     }
