--- a/public/sass/partials/_typography.scss
+++ b/public/sass/partials/_typography.scss
@@ -1,7 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 @font-face {
-    font-family: 'panama';
-    src: url('/fonts/panama-bold-webfont.woff2') format('woff2'),
-         url('/fonts/panama-bold-webfont.woff') format('woff');
+    font-family: 'Roboto', sans-serif;
     font-weight: normal;
     font-style: normal;
 
