--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,15 +13,16 @@ html
             li.nav__item
               a.nav__link.nav__link--logo(href="/")
                 != h.icon('logo')
+            li.nav__item--spacer
             each item in h.menu
               li.nav__item
                 a.nav__link(href=item.slug, class=(currentPath.startsWith(item.slug) ? 'nav__link--active' : ''))
-                  != h.icon(item.icon)
+                  // != h.icon(item.icon)
                   span #{item.title}
-          .nav__section.nav__section--search
-            .search
-              input.search__input(type="text" placeholder="Coffee, beer..." name="search")
-              .search__results
+          //- .nav__section.nav__section--search
+          //-   .search
+          //-     input.search__input(type="text" placeholder="Coffee, beer..." name="search")
+          //-     .search__results
           .nav__section.nav__section--user
             if user
               li.nav__item: a.nav__link(href="/hearts", class=(currentPath.startsWith('/hearts') ? 'nav__link--active' : ''))
